Name:                vector-space
Version:             0.12
Cabal-Version:       >= 1.6
Synopsis:            Vector & affine spaces, linear maps, and derivatives
Category:            math
Description:
  /vector-space/ provides classes and generic operations for vector
  spaces and affine spaces.  It also defines a type of infinite towers
  of generalized derivatives.  A generalized derivative is a linear
  transformation rather than one of the common concrete representations
  (scalars, vectors, matrices, ...).
  .
  /Warning/: this package depends on type families working fairly well,
  requiring GHC version at least 6.9.
  .
  Project wiki page: <http://haskell.org/haskellwiki/vector-space>
  .
  &#169; 2008-2012 by Conal Elliott; BSD3 license.
Author:              Conal Elliott 
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2012 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

source-repository head
  type:     git
  location: git://github.com/conal/vector-space.git

Library
  hs-Source-Dirs:      src
  Extensions:          
  Build-Depends:       base<5, MemoTrie >= 0.5
                     , Boolean >= 0.1.0
                     , NumInstances >= 1.0
  Exposed-Modules:     
                     Data.AdditiveGroup
                     Data.VectorSpace
                     Data.Basis
                     Data.LinearMap
                     Data.Maclaurin
--                   Data.Horner
                     Data.Derivative
                     Data.Cross
                     Data.AffineSpace
  Other-Modules:     
                     Data.VectorSpace.Generic


  -- This library relies on type families working as well as in 6.10.
  if impl(ghc < 6.10) {
    buildable: False
  }
  if !impl(ghc >= 7.9) {
    Build-Depends: void >= 0.4
  }
  ghc-options:         -Wall -O2
--  ghc-prof-options:    -prof -auto-all 

-- For ghc-options: -ddump-simpl-stats -ddump-rules -ddump-simpl -ddump-simpl-phases
