Name:                vector-space
Version:             0.19
Cabal-Version:       >= 1.10
Synopsis:            Vector & affine spaces, linear maps, and derivatives
Category:            math
Description:
  /vector-space/ provides classes and generic operations for vector
  spaces and affine spaces.  It also defines a type of infinite towers
  of generalized derivatives.  A generalized derivative is a linear
  transformation rather than one of the common concrete representations
  (scalars, vectors, matrices, ...).
  .
  Project wiki page: <http://haskell.org/haskellwiki/vector-space>
  .
  &#169; 2008-2012 by Conal Elliott; BSD3 license.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2008-2012 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple

tested-with:
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type:     git
  location: https://github.com/conal/vector-space.git

Library
  default-language:  Haskell2010
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 4.9 && <5
                     , MemoTrie >= 0.5
                     , Boolean >= 0.1.0
                     , NumInstances >= 1.0
  Exposed-Modules:
                     Data.AdditiveGroup
                     Data.VectorSpace
                     Data.Basis
                     Data.LinearMap
                     Data.Maclaurin
--                   Data.Horner
                     Data.Derivative
                     Data.Cross
                     Data.AffineSpace
  Other-Modules:
                     Data.VectorSpace.Generic
